classDiagram
    %% onDelete: cascade
    class InstructorAssignment {
        +id: int
        +role: enum
        +employment_type: enum
        +hourly_rate: decimal
        +is_volunteer: boolean
        +confirmed: boolean
        +hours_worked: decimal
    }
    Event "1" -- "0..*" InstructorAssignment : event
    Person "1" -- "0..*" InstructorAssignment : instructor
    Org "0..1" -- "0..*" InstructorAssignment : employer
    
    %% onDelete: setNull
    class InstructorEvaluation {
        +id: int
        +technical_skills: int
        +teaching_ability: int
        +reliability: int
        +student_engagement: int
        +notes: text
        +potential_hire: boolean
        +created_at: date
    }
    InstructorAssignment "1" -- "0..*" InstructorEvaluation : instructor_assignment
    Person "1" -- "0..*" InstructorEvaluation : evaluator


    %% onDelete: setNull
    class JobPosting {
        +id: int
        +title: string
        +description: richtext
        +hourly_rate: string
        +hours_per_week: string
        +requirements: text
        +status: enum
        +posted_date: date
    }
    Org "1" -- "0..*" JobPosting : Org
    Metro "1" -- "0..*" JobPosting : metro
    